# YataiDON

./: .gitignore  .gitmodules  .luarc.json  CMakeLists.txt  CMakePresets.json  Makefile  README.md  build_debug.sh  build_debug_fast.sh  build_re.sh  build_release.sh  build_web.sh  config.toml  lsan.supp  meson.build  raylib_rlvk.pipelinecache  run_asan.sh  update.ps1  update.sh
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request--for-devs-.md  feature-request--for-players-.md
.github/workflows/: build-debug.yml  build.yml
Songs/: Calibration.tja
android/: gradle.properties  local.properties.template  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/yataidon/app/: YataiDONActivity.java
android/app/src/main/res/values/: strings.xml
cmake/: ApplyRaylibPatch.cmake  deps.cmake  platform.cmake
cmake/patches/: FixShadercGlslangInstall.cmake  raylib-sdl-vulkan.patch  sdl3-vita-load-gpu-es4.patch  sol2-android-noexcept.patch
forlater/: box_dan.cpp  box_song_osu.cpp  genre_bg.cpp  genre_bg.h  score_history.cpp  score_history.h
shader/: fxaa.fs  mask.fs  outline.fs  outline.vs
shader/es/: colortransform.fs  dummy.vs  fxaa.fs  mask.fs  outline.fs  outline.vs  outline_pass.fs
src/: CPPTaiko.cpp  YataiDON.cpp
src/libs/: animation.cpp  animation.h  audio.cpp  audio.h  audio_engine.cpp  audio_engine.h  audio_raylib.cpp  audio_raylib.h  av.h  camera_utils.h  color_utils.h  config.cpp  config.h  filesystem.cpp  filesystem.h  global_data.cpp  global_data.h  input.cpp  input.h  logging.cpp  logging.h  network.cpp  network.h  ray.h  scores.cpp  scores.h  screen.h  script.cpp  script.h  song_parser.cpp  song_parser.h  text.cpp  text.h  texture.cpp  texture.h  utils.cpp  utils.h  video.cpp  video.h
src/libs/audio/: audio.c  audio.cpp  pa_asio.h  wasapi_exclusive.cpp  wasapi_exclusive.h  wdmks_exclusive.cpp  wdmks_exclusive.h
src/libs/parsers/: fumen.cpp  fumen.h  osu.cpp  osu.h  song_parser.cpp  song_parser.h  tja.cpp  tja.h
src/objects/: drumhiteffect.cpp  drumhiteffect.h  enums.h  fps_counter.cpp  fps_counter.h  judgment.h  lanehiteffect.cpp  lanehiteffect.h  player.cpp  player.h
src/objects/entry/: box.cpp  box.h  box_manager.cpp  box_manager.h  costume_menu.cpp  costume_menu.h  entry_script.cpp  entry_script.h  player.cpp  player.h
src/objects/game/: background.cpp  background.h  balloon_counter.cpp  balloon_counter.h  branch_indicator.cpp  branch_indicator.h  clear_animation.cpp  clear_animation.h  combo.cpp  combo.h  combo_announce.cpp  combo_announce.h  dan_gauge.cpp  dan_gauge.h  drum_hit_effect.cpp  drum_hit_effect.h  drumroll_counter.cpp  drumroll_counter.h  fail_animation.cpp  fail_animation.h  fc_animation.cpp  fc_animation.h  fireworks.cpp  fireworks.h  gauge.cpp  gauge.h  gauge_hit_effect.cpp  gauge_hit_effect.h  gogo_time.cpp  gogo_time.h  judge_counter.cpp  judge_counter.h  judgment.cpp  judgment.h  kusudama_counter.cpp  kusudama_counter.h  lane_hit_effect.cpp  lane_hit_effect.h  note_arc.cpp  note_arc.h  (+12 more)
src/objects/global/: allnet_indicator.cpp  allnet_indicator.h  chara_3d.cpp  chara_3d.h  coin_overlay.cpp  coin_overlay.h  entry_overlay.cpp  entry_overlay.h  fps_counter.cpp  fps_counter.h  indicator.cpp  indicator.h  nameplate.cpp  nameplate.h  timer.cpp  timer.h
src/objects/result/: background.cpp  background.h  bottom_characters.cpp  bottom_characters.h  fade_in.cpp  fade_in.h  gauge.cpp  gauge.h  high_score_indicator.cpp  high_score_indicator.h  player.cpp  player.h  result_crown.cpp  result_crown.h  result_crown_message.cpp  result_crown_message.h  score_animator.cpp  score_animator.h
src/objects/sandbox/: fixtures.h  fixtures_global.h  fixtures_result.h
src/objects/settings/: config_ref.h  option_box.cpp  option_box.h  settings_box.cpp  settings_box.h  settings_box_manager.cpp  settings_box_manager.h
src/objects/song_select/: dan_transition.cpp  dan_transition.h  diff_sort.cpp  diff_sort.h  modifier.cpp  modifier.h  neiro.cpp  neiro.h  player.cpp  player.h  search_box.cpp  search_box.h  song_select_script.cpp  song_select_script.h  ura_switch.cpp  ura_switch.h
src/objects/song_select/file_navigator/: box_back.cpp  box_back.h  box_base.cpp  box_base.h  box_dan.cpp  box_dan.h  box_folder.cpp  box_folder.h  box_song.cpp  box_song.h  box_song_osu.cpp  box_song_osu.h  box_yellow.cpp  box_yellow.h  color_utils.cpp  color_utils.h  genre_bg.cpp  genre_bg.h  navigator.cpp  navigator.h  score_history.cpp  score_history.h
src/objects/title/: attract_camera.cpp  bana_advert.cpp  warning_screen.cpp  warning_screen.h
src/scenes/: dan_result.cpp  dan_result.h  dan_select.cpp  dan_select.h  entry.cpp  entry.h  game.cpp  game.h  game_2p.cpp  game_2p.h  game_dan.cpp  game_dan.h  game_over.cpp  game_practice.cpp  game_practice.h  input_cali.cpp  input_cali.h  loading.cpp  loading.h  result.cpp  result.h  result_2p.cpp  result_2p.h  sandbox.cpp  sandbox.h  settings.cpp  settings.h  skin_viewer.cpp  skin_viewer.h  song_select.cpp  song_select.h  song_select_2p.cpp  song_select_2p.h  song_select_practice.h  title.cpp  title.h
tools/: build_ffmpeg_android.sh  gen_skin_config.py  gen_textures.py
